--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-plus": "^2.6.1",
     "pinia": "^2.1.7",
     "qs": "^6.12.0",
+    "vditor": "^3.10.1",
     "vue": "^3.4.21",
     "vue-router": "4"
   },
