--- a/package.json
+++ b/package.json
@@ -9,28 +9,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/node": "^20.11.27",
-    "axios": "^1.6.7",
-    "element-plus": "^2.6.1",
+    "@types/node": "^20.12.5",
+    "axios": "^1.6.8",
+    "element-plus": "^2.6.3",
     "pinia": "^2.1.7",
     "qs": "^6.12.0",
-    "vditor": "^3.10.1",
+    "vditor": "^3.10.3",
     "vue": "^3.4.21",
-    "vue-router": "4"
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@iconify-json/ic": "^1.1.17",
-    "@iconify-json/line-md": "^1.1.36",
-    "@iconify-json/mdi": "^1.1.64",
+    "@iconify-json/line-md": "^1.1.37",
+    "@iconify-json/mdi": "^1.1.66",
     "@iconify-json/twemoji": "^1.1.15",
-    "@types/qs": "^6.9.12",
+    "@types/qs": "^6.9.14",
     "@vitejs/plugin-vue": "^5.0.4",
-    "sass": "^1.72.0",
-    "typescript": "^5.2.2",
-    "unocss": "^0.58.5",
+    "sass": "^1.74.1",
+    "typescript": "^5.4.4",
+    "unocss": "^0.58.9",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.1.6",
+    "vite": "^5.2.8",
     "vue-tsc": "^1.8.27"
   }
 }
