--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "sass": "^1.74.1",
     "typescript": "^5.4.4",
-    "unocss": "^0.58.9",
+    "unocss": "66.1.0-beta.8",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.2.8",
-    "vue-tsc": "^1.8.27"
-  }
+    "vue-tsc": "^2.2.8"
+  },
+  "packageManager": "pnpm@10.7.0+sha512.6b865ad4b62a1d9842b61d674a393903b871d9244954f652b8842c2b553c72176b278f64c463e52d40fff8aba385c235c8c9ecf5cc7de4fd78b8bb6d49633ab6"
 }
